# pixels-engine

./: Cargo.toml  rustfmt.toml
assets/: world.ldtk
shaders/: noise.wgsl
src/: application.rs  camera.rs  components.rs  draw.rs  ecs.rs  fps_counter.rs  input.rs  ivec2.rs  lib.rs  main.rs  movement_util.rs  player.rs  renderer.rs  resource.rs  spritesheet.rs  system_container.rs  tile.rs  vec2.rs
src/systems/: animation.rs  camera.rs  cast_spell.rs  character_animation.rs  collision.rs  debug_grid.rs  level_transition.rs  light_control.rs  light_render.rs  mod.rs  movement.rs  render.rs  spell_effect.rs  sprite_render.rs  tile_animation.rs  tile_render.rs
tests/: resources.rs
