[package]
name = "pixels_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
hecs = "0.10.5"
image = "0.25.5"
lazy_static = "1.5.0"
ldtk2 = "0.8.0"
pixels = "0.14.0"
winit = "0.28.6"
bytemuck = { version = "1.14", features = ["derive"] }
wgpu = "0.17.2"

[features]
debug = []
fps = []
